crimesjohnson: add second endpoint
